[gd_scene load_steps=11 format=3 uid="uid://bqxvhqxqxqxqx"]

[ext_resource type="PackedScene" uid="uid://hqfnafaag1yy" path="res://Player/tung.tscn" id="1_0x0x0"]
[ext_resource type="Script" uid="uid://dg5avii0ujofr" path="res://scripts/Game.gd" id="2_0x0x0"]
[ext_resource type="Script" uid="uid://bwijt0toe31yu" path="res://scripts/ProceduralGround.gd" id="3_0x0x0"]
[ext_resource type="Script" uid="uid://bnwdi5skpif7x" path="res://scripts/DebugOverlay.gd" id="4_0x0x0"]
[ext_resource type="Script" uid="uid://vu2rh3mbcquj" path="res://scripts/CollisionVisualizer.gd" id="5_0x0x0"]
[ext_resource type="PackedScene" uid="uid://3sksd0fw621u" path="res://World/parallax_background.tscn" id="7_0x0x0"]
[ext_resource type="Script" uid="uid://bmlmwjjwfavph" path="res://scripts/BossHPBar.gd" id="8_0x0x0"]
[ext_resource type="Script" uid="uid://bxl52873uf7cr" path="res://scripts/BossAlarm.gd" id="9_0x0x0"]
[ext_resource type="PackedScene" uid="uid://c5lvtw6fivry6" path="res://scenes/StagePopup.tscn" id="10_0x0x0"]
[ext_resource type="AudioStream" uid="uid://chq3n4pj5etf2" path="res://Music/Tung Tung Tung Sahur.mp3" id="10_qy1jj"]

[node name="Game" type="Node2D"]
script = ExtResource("2_0x0x0")

[node name="ParallaxBackground" parent="." instance=ExtResource("7_0x0x0")]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(100, 300)

[node name="Player" parent="." instance=ExtResource("1_0x0x0")]

[node name="ProceduralGround" type="Node2D" parent="."]
script = ExtResource("3_0x0x0")

[node name="ObstacleSpawner" type="Node2D" parent="."]

[node name="ObstacleTimer" type="Timer" parent="ObstacleSpawner"]
wait_time = 2.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "Score: 0"

[node name="LifeLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 110.0
text = "Life: 100"

[node name="StageLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 120.0
offset_right = -20.0
offset_bottom = 150.0
text = "Stage: 1"

[node name="BossHPBar" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 160.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
script = ExtResource("8_0x0x0")

[node name="BossNameLabel" type="Label" parent="UI/BossHPBar"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_right = -20.0
offset_bottom = 20.0
text = "BOSS DRONE"
horizontal_alignment = 1

[node name="HPBar" type="ProgressBar" parent="UI/BossHPBar"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 25.0
offset_right = -20.0
offset_bottom = 45.0
value = 100.0

[node name="HPLabel" type="Label" parent="UI/BossHPBar"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 70.0
text = "HP: 100/100"
horizontal_alignment = 1

[node name="BossAlarm" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_0x0x0")

[node name="AlarmBackground" type="ColorRect" parent="UI/BossAlarm"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 0, 0, 0.3)

[node name="AlarmLabel" type="Label" parent="UI/BossAlarm"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
text = "BOSS ALARM!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instructions" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
text = "Press SPACE or UP ARROW to jump
Press DOWN ARROW to slide
Avoid obstacles!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StagePopup" parent="UI" instance=ExtResource("10_0x0x0")]

[node name="DebugOverlay" type="CanvasLayer" parent="."]
script = ExtResource("4_0x0x0")

[node name="CollisionVisualizer" type="Node2D" parent="."]
script = ExtResource("5_0x0x0")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_qy1jj")
autoplay = true
